# Aegis

./: .env.example  .firebaserc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AEGIS_Master_Build_Blueprint.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  Makefile  README.md  SETUP.md  cloudbuild-dispatch.yaml  cloudbuild-ingest.yaml  cloudbuild-orchestrator.yaml  cloudbuild-vision.yaml  cloudbuild.yaml  cloudbuild_dispatch.yaml  cloudbuild_ingest.yaml  cloudbuild_orchestrator.yaml  cloudbuild_vision.yaml  docker-compose.yml  firebase.json  package-lock.json  package.json  progress.md  pyproject.toml  requirements.txt
.audit/: aegis_audit.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.secrets/: README.md
agents/: __init__.py  pyproject.toml
agents/cascade/: README.md  agent.py
agents/classifier/: README.md  __init__.py  agent.py
agents/comms/: README.md
agents/dispatcher/: README.md  __init__.py  agent.py
agents/evacuation/: README.md
agents/orchestrator/: README.md  __init__.py  agent.py
agents/triage/: README.md
apps/dashboard/: aegis-ui-web-0.1.0.tgz  apphosting.yaml  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/dashboard/public/: manifest.webmanifest
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/lib/: actions.ts
apps/staff/: aegis-ui-web-0.1.0.tgz  apphosting.yaml  next.config.mjs  package-lock.json  package.json
apps/staff/public/: firebase-messaging-sw.js  manifest.webmanifest
apps/staff/src/app/: globals.css  layout.tsx  page.tsx
docs/: architecture.md  runbook.md
docs/decisions/: 0001-core-technology-stack.md  0002-vision-service-uses-real-gemini-with-fallback.md  0003-nextjs-pivot-for-phase-1-operator-surfaces.md  0004-dispatcher-uses-layered-ranking-not-full-optimizer.md  0005-cascade-prediction-uses-gemini-pro-with-heuristic-backstop.md
firebase/: firestore.indexes.json  firestore.rules
firebase/functions/: package.json
firebase/functions/src/: index.js  index.ts
prompts/: README.md  cascade_predictor.md  classifier.md  dispatcher_rerank.md  orchestrator.md  vision_classifier.md
pubsub-schemas/: README.md  dispatch_event.schema.json  incident_event.schema.json  perceptual_signal.schema.json  raw_frame.schema.json  sensor_event.schema.json
scripts/: deploy.ps1  deploy_firebase.ps1  dev.ps1  dev.sh  pack-ui.ps1  pack-ui.sh  setup_and_deploy_frontend.ps1  smoke.ps1  smoke.sh
services/dispatch/: Dockerfile  README.md  main.py  pyproject.toml
services/dispatch/tests/: test_dispatch.py
services/ingest/: Dockerfile  README.md  main.py  pyproject.toml
services/ingest/routers/: frames.py  health.py  sensors.py
services/ingest/tests/: test_ingest.py
services/orchestrator/: Dockerfile  README.md  main.py  pyproject.toml
services/orchestrator/tests/: test_orchestrator.py
services/shared/: pyproject.toml
services/shared/aegis_shared/: __init__.py  audit.py  auth.py  config.py  errors.py  fcm.py  firestore.py  gemini.py  logger.py  prompts.py  pubsub.py  schemas.py  security.py
services/vision/: Dockerfile  README.md  main.py  pyproject.toml
services/vision/tests/: test_vision.py
terraform/: README.md  apis.tf  artifact_registry.tf  bigquery.tf  iam.tf  outputs.tf  pubsub.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/agent_evals/: scenarios.json  test_classifier_eval.py
tests/e2e/: README.md  dashboard-smoke.spec.ts
tests/load/: README.md  incident_pipeline_smoke.js
(+9 files in other folders)
