[project]
name = "aegis-dispatch"
version = "0.1.0"
description = "Dispatch — responder paging, acknowledge, escalation"
requires-python = ">=3.12"
dependencies = [
    "aegis-shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "firebase-admin>=6.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
aegis-shared = { path = "../shared", editable = true }
